Configure the project for development

--- a/doc/readme.hbs
+++ b/doc/readme.hbs
@@ -86,3 +86,9 @@ npm run build
 ```
 
 ## API Reference
+{{#module name="sedra"}}
+{{>body~}}
+{{>member-index~}}
+{{>separator~}}
+{{>members~}}
+{{/module}}
